fix: matchRepoImpl null값고치고 로깅 레벨 info change. 복합 트랜잭션을 위한 transactinoalOperation

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -49,7 +49,7 @@ logging:
     root: INFO
     
     # 애플리케이션 상세 
-    com.smwu.matchalot: DEBUG
+    com.smwu.matchalot: INFO
     
     # Spring Security 관련 상세 
     org.springframework.security: DEBUG
