--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
     // SpringDoc OpenAPI (Swagger) - WebFlux 지원
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
+    
+    // Email 지원
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'io.projectreactor.addons:reactor-extra'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
