fix: matches updated At 필드추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -46,33 +46,20 @@ app:
 
 logging:
   level:
-    root: INFO
+    root: WARN
     
     # 애플리케이션 상세 
     com.smwu.matchalot: INFO
     
     # Spring Security 관련 상세 
-    org.springframework.security: DEBUG
-    org.springframework.security.web: DEBUG
-    org.springframework.security.oauth2: DEBUG
-    org.springframework.security.web.server.csrf: TRACE
-    org.springframework.security.web.server.authentication: DEBUG
-    
-    # OAuth2 관련 상세 
-    org.springframework.security.oauth2.client: DEBUG
-    org.springframework.security.oauth2.core: DEBUG
-    org.springframework.security.web.server.authentication.oauth2: DEBUG
-    
-    # 웹 요청 관련 
-    org.springframework.web: DEBUG
-    org.springframework.web.server: DEBUG
-    org.springframework.web.reactive: DEBUG
+    org.springframework.security: WARN
+    org.springframework.security.web: WARN
+
+
+    org.springframework.web.reactive: WARN
     
     # DB
-    org.springframework.r2dbc: DEBUG
-    org.springframework.r2dbc.core: DEBUG
-    org.springframework.data.r2dbc: DEBUG
-    io.r2dbc.postgresql: DEBUG
+    org.springframework.r2dbc: WARN
     
     # Flyway 
     org.flywaydb: DEBUG
