--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -105,3 +105,10 @@ management:
       show-details: always
     loggers:
       enabled: true
+
+azure:
+  storage:
+    account-name: matchalotpdf
+    account-key: ${AZURE_STORAGE_KEY}
+    container-name: study-materials
+    endpoint: https://matchalotstorage.blob.core.windows.net
