--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -90,36 +90,17 @@ jobs:
               docker rm matchalot-backend 2>/dev/null || true
             fi
             
-            # 새 컨테이너 실행
+            # 새 컨테이너 실행 (docker-compose 활용)
             echo "=== $TARGET_ENV 환경에 새 컨테이너 실행 중 ==="
             
-            # 네트워크 확인 및 연결 (기존 docker-compose 네트워크 사용)
-            NETWORK_NAME=$(docker network ls --format "{{.Name}}" | grep -E "(devops|app)" | head -1)
-            if [ -z "$NETWORK_NAME" ]; then
-              echo "네트워크를 찾을 수 없어 기본 네트워크 사용"
-              NETWORK_OPTION=""
-            else
-              echo "네트워크 사용: $NETWORK_NAME"
-              NETWORK_OPTION="--network $NETWORK_NAME"
-            fi
+            # deploy 디렉토리로 이동
+            cd /home/youkm0806/matchalot/backend/deploy
             
-            docker run -d \
-              --name matchalot-$TARGET_ENV \
-              -p $TARGET_PORT:8080 \
-              --restart unless-stopped \
-              $NETWORK_OPTION \
-              -e SPRING_PROFILES_ACTIVE=prod \
-              -e DB_HOST=postgres \
-              -e DB_PORT=5432 \
-              -e DB_NAME=matchalot \
-              -e DB_USERNAME=matchalot \
-              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-              -e ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }} \
-              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
-              -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
-              -e GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
-              -e AZURE_STORAGE_KEY=${{ secrets.AZURE_STORAGE_KEY }} \
-              matchalot:latest
+            # 임시 docker-compose 파일 생성 (포트만 변경)
+            sed "s/matchalot-app/matchalot-$TARGET_ENV/g; s/8080:8080/$TARGET_PORT:8080/g" docker-compose.yml > docker-compose-$TARGET_ENV.yml
+            
+            # docker-compose로 컨테이너 실행
+            docker-compose -f docker-compose-$TARGET_ENV.yml up -d
             
             # 헬스체크 (최대 30회, 각 5초 간격)
             echo "=== $TARGET_ENV 환경 헬스체크 중 ==="
