--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -41,7 +41,7 @@ jobs:
             if docker ps --format 'table {{.Names}}' | grep -q "matchalot-blue"; then
               if docker ps --format 'table {{.Names}}' | grep -q "matchalot-green"; then
                 # 둘 다 실행 중이면 nginx 설정 확인
-                if grep -q "server 127.0.0.1:8080 weight=1" /etc/nginx/nginx.conf 2>/dev/null; then
+                if grep -q "server matchalot-blue:8080" /etc/nginx/nginx.conf 2>/dev/null; then
                   CURRENT_ENV="blue"
                   CURRENT_PORT=8080
                   TARGET_ENV="green"  
@@ -90,35 +90,33 @@ jobs:
               docker rm matchalot-backend 2>/dev/null || true
             fi
             
-            # 새 컨테이너 실행
+            # 새 컨테이너 실행 (docker-compose 활용)
             echo "=== $TARGET_ENV 환경에 새 컨테이너 실행 중 ==="
             
-            # 네트워크 확인 및 연결 (기존 docker-compose 네트워크 사용)
-            NETWORK_NAME=$(docker network ls --format "{{.Name}}" | grep -E "(devops|app|matchalot)" | head -1)
-            if [ -z "$NETWORK_NAME" ]; then
-              echo "네트워크를 찾을 수 없어 기본 네트워크 사용"
-              NETWORK_OPTION=""
-            else
-              echo "네트워크 사용: $NETWORK_NAME"
-              NETWORK_OPTION="--network $NETWORK_NAME"
-            fi
+            # deploy 디렉토리로 이동
+            cd /home/youkm0806/matchalot/backend/deploy
             
-            docker run -d \
-              --name matchalot-$TARGET_ENV \
-              -p $TARGET_PORT:8080 \
-              --restart unless-stopped \
-              $NETWORK_OPTION \
-              -e SPRING_PROFILES_ACTIVE=prod \
-              -e DB_HOST=${{ secrets.DB_HOST }} \
-              -e DB_PORT=${{ secrets.DB_PORT }} \
-              -e DB_NAME=${{ secrets.DB_NAME }} \
-              -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
-              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
-              -e ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }} \
-              -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
-              -e GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
-              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
-              matchalot:latest
+            # 환경변수 설정
+            cat > .env << EOF
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_PORT=${{ secrets.DB_PORT }}
+            DB_NAME=${{ secrets.DB_NAME }}
+            DB_USERNAME=${{ secrets.DB_USERNAME }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}
+            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+            EOF
+            
+            # Blue-Green을 위한 임시 docker-compose 파일 생성
+            if [ "$TARGET_ENV" = "blue" ]; then
+              sed "s/matchalot-backend/matchalot-blue/g; s/8080:8080/8080:8080/g" docker-compose.yml > docker-compose-blue.yml
+              docker-compose -f docker-compose-blue.yml up -d
+            else
+              sed "s/matchalot-backend/matchalot-green/g; s/8080:8080/8081:8080/g" docker-compose.yml > docker-compose-green.yml
+              docker-compose -f docker-compose-green.yml up -d
+            fi
             
             # 헬스체크 (최대 30회, 각 5초 간격)
             echo "=== $TARGET_ENV 환경 헬스체크 중 ==="
@@ -148,16 +146,12 @@ jobs:
               # upstream 설정 변경
               if [ "$TARGET_ENV" = "green" ]; then
                 # Blue -> Green 전환
-                sudo sed -i 's/server 127.0.0.1:8080 weight=1;/server 127.0.0.1:8080 weight=0;/' /etc/nginx/nginx.conf
-                sudo sed -i 's/server 127.0.0.1:8081 weight=0;/server 127.0.0.1:8081 weight=1;/' /etc/nginx/nginx.conf
-                # backend upstream도 변경
-                sudo sed -i 's/server backend:8080;/server 127.0.0.1:8081;/' /etc/nginx/nginx.conf
+                sudo sed -i 's/server matchalot-blue:8080;/server matchalot-green:8080;/' /etc/nginx/nginx.conf
+                sudo sed -i 's/server matchalot-backend:8080;/server matchalot-green:8080;/' /etc/nginx/nginx.conf
               else
-                # Green -> Blue 전환
-                sudo sed -i 's/server 127.0.0.1:8081 weight=1;/server 127.0.0.1:8081 weight=0;/' /etc/nginx/nginx.conf
-                sudo sed -i 's/server 127.0.0.1:8080 weight=0;/server 127.0.0.1:8080 weight=1;/' /etc/nginx/nginx.conf
-                # backend upstream도 변경
-                sudo sed -i 's/server 127.0.0.1:8081;/server backend:8080;/' /etc/nginx/nginx.conf
+                # Green -> Blue 전환  
+                sudo sed -i 's/server matchalot-green:8080;/server matchalot-blue:8080;/' /etc/nginx/nginx.conf
+                sudo sed -i 's/server matchalot-backend:8080;/server matchalot-blue:8080;/' /etc/nginx/nginx.conf
               fi
             
               # nginx 설정 테스트 및 리로드
