fix:컨테이너 기존것정리

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -30,9 +30,22 @@ jobs:
             # 프로젝트 디렉토리로 이동
             cd /home/youkm0806/matchalot/backend
             
-            # 코드 업데이트
+            # 코드 업데이트 (재시도 로직 포함)
             echo "=== 코드 업데이트 중 ==="
-            git fetch origin main
+            for i in {1..3}; do
+              echo "Git fetch 시도 $i/3..."
+              if git fetch origin main; then
+                echo "Git fetch 성공!"
+                break
+              fi
+              if [ $i -eq 3 ]; then
+                echo "Git fetch 실패! 기존 코드로 진행..."
+                break
+              fi
+              echo "5초 후 재시도..."
+              sleep 5
+            done
+            
             git reset --hard origin/main
             git clean -fd
             
