--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -30,52 +30,29 @@ jobs:
             # 프로젝트 디렉토리로 이동
             cd /home/youkm0806/matchalot/backend
             
-            # 코드 업데이트 (재시도 로직 포함)
+            # 코드 업데이트 (빠른 방식)
             echo "=== 코드 업데이트 중 ==="
-            for i in {1..3}; do
-              echo "Git fetch 시도 $i/3..."
-              if git fetch origin main; then
-                echo "Git fetch 성공!"
-                break
-              fi
-              if [ $i -eq 3 ]; then
-                echo "Git fetch 실패! 기존 코드로 진행..."
-                break
-              fi
-              echo "5초 후 재시도..."
-              sleep 5
-            done
+            timeout 30 git fetch origin main || echo "Git fetch 실패, 기존 코드 사용"
+            git reset --hard origin/main 2>/dev/null || true
+            git clean -fd 2>/dev/null || true
             
-            git reset --hard origin/main
-            git clean -fd
-            
-            # 현재 활성 환경 확인
+            # 현재 활성 환경 확인 (간단한 방식)
             echo "=== 현재 활성 환경 확인 중 ==="
-            if docker ps --format 'table {{.Names}}' | grep -q "matchalot-blue"; then
-              if docker ps --format 'table {{.Names}}' | grep -q "matchalot-green"; then
-                # 둘 다 실행 중이면 nginx 설정 확인
-                if grep -q "server matchalot-blue:8080" /etc/nginx/nginx.conf 2>/dev/null; then
-                  CURRENT_ENV="blue"
-                  CURRENT_PORT=8080
-                  TARGET_ENV="green"  
-                  TARGET_PORT=8081
-                else
-                  CURRENT_ENV="green"
-                  CURRENT_PORT=8081
-                  TARGET_ENV="blue"
-                  TARGET_PORT=8080
-                fi
+            if docker ps --format '{{.Names}}' | grep -q "matchalot-blue"; then
+              if docker ps --format '{{.Names}}' | grep -q "matchalot-green"; then
+                # 둘 다 실행 중 - green으로 전환
+                CURRENT_ENV="blue"
+                TARGET_ENV="green"
+                TARGET_PORT=8081
               else
                 # blue만 실행 중
                 CURRENT_ENV="blue"
-                CURRENT_PORT=8080
                 TARGET_ENV="green"
                 TARGET_PORT=8081
               fi
-            elif docker ps --format 'table {{.Names}}' | grep -q "matchalot-green"; then
+            elif docker ps --format '{{.Names}}' | grep -q "matchalot-green"; then
               # green만 실행 중
               CURRENT_ENV="green"
-              CURRENT_PORT=8081
               TARGET_ENV="blue"
               TARGET_PORT=8080
             else
@@ -112,8 +89,8 @@ jobs:
             # 새 컨테이너 실행 (docker-compose 활용)
             echo "=== $TARGET_ENV 환경에 새 컨테이너 실행 중 ==="
             
-            # deploy 디렉토리로 이동
-            cd /home/youkm0806/matchalot/backend/deploy
+            # devops 디렉토리로 이동 (docker-compose가 있는 곳)
+            cd /home/youkm0806/matchalot/devops
             
             # 환경변수 설정
             cat > .env << EOF
@@ -137,22 +114,22 @@ jobs:
               docker-compose -f docker-compose-green.yml up -d
             fi
             
-            # 헬스체크 (최대 30회, 각 5초 간격)
+            # 헬스체크 (최대 20회, 각 3초 간격)
             echo "=== $TARGET_ENV 환경 헬스체크 중 ==="
-            for i in {1..30}; do
-              echo "헬스체크 시도 $i/30..."
+            for i in {1..20}; do
+              echo "헬스체크 시도 $i/20..."
               if curl -f -s http://localhost:$TARGET_PORT/actuator/health > /dev/null 2>&1; then
                 echo "$TARGET_ENV 환경 준비 완료!"
                 break
               fi
-              if [ $i -eq 30 ]; then
+              if [ $i -eq 20 ]; then
                 echo "$TARGET_ENV 환경 헬스체크 실패!"
-                docker logs matchalot-$TARGET_ENV --tail 50
+                docker logs matchalot-$TARGET_ENV --tail 20
                 docker stop matchalot-$TARGET_ENV
                 docker rm matchalot-$TARGET_ENV
                 exit 1
               fi
-              sleep 5
+              sleep 3
             done
             
             # nginx 설정 업데이트 및 트래픽 전환
@@ -161,21 +138,21 @@ jobs:
             
               # nginx 설정 백업 (docker 컨테이너 내부에서)
               docker exec matchalot-nginx cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.backup
-              cp nginx-ssl.conf nginx-ssl.conf.backup
+              cp ../nginx-ssl.conf ../nginx-ssl.conf.backup
             
               # 로컬 설정 파일 변경
               if [ "$TARGET_ENV" = "green" ]; then
                 # Blue -> Green 전환
-                sed -i 's/server matchalot-blue:8080;/server matchalot-green:8080;/' nginx-ssl.conf
-                sed -i 's/server backend:8080;/server matchalot-green:8080;/' nginx-ssl.conf
+                sed -i 's/server matchalot-blue:8080;/server matchalot-green:8080;/' ../nginx-ssl.conf
+                sed -i 's/server backend:8080;/server matchalot-green:8080;/' ../nginx-ssl.conf
               else
                 # Green -> Blue 전환  
-                sed -i 's/server matchalot-green:8080;/server matchalot-blue:8080;/' nginx-ssl.conf
-                sed -i 's/server backend:8080;/server matchalot-blue:8080;/' nginx-ssl.conf
+                sed -i 's/server matchalot-green:8080;/server matchalot-blue:8080;/' ../nginx-ssl.conf
+                sed -i 's/server backend:8080;/server matchalot-blue:8080;/' ../nginx-ssl.conf
               fi
               
               # 변경된 설정을 컨테이너에 복사
-              docker cp nginx-ssl.conf matchalot-nginx:/etc/nginx/nginx.conf
+              docker cp ../nginx-ssl.conf matchalot-nginx:/etc/nginx/nginx.conf
             
               # nginx 설정 테스트 및 리로드
               if docker exec matchalot-nginx nginx -t; then
