--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -23,7 +23,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
-          timeout: 600s
+          timeout: 900s
           script: |
             echo "=== Blue-Green 배포 시작 ==="
             
@@ -64,26 +64,16 @@ jobs:
             
             echo "현재 활성: $CURRENT_ENV | 배포 대상: $TARGET_ENV (포트: $TARGET_PORT)"
             
-            # 새 이미지 빌드
-            echo "=== Docker 이미지 빌드 중 ==="
-            docker build -t matchalot:latest /home/youkm0806/matchalot/backend
-            
             # 기존 컨테이너들 정리
             echo "=== 기존 컨테이너들 정리 중 ==="
             docker stop matchalot-$TARGET_ENV 2>/dev/null || true
             docker rm matchalot-$TARGET_ENV 2>/dev/null || true
             
-            # 첫 배포시 기존 모든 컨테이너 정리
+            # 첫 배포시만 기존 backend 컨테이너 정리 (nginx, prometheus, grafana는 유지)
             if [ "$CURRENT_ENV" = "none" ]; then
-              echo "=== 기존 모든 matchalot 컨테이너 정리 중 ==="
+              echo "=== 기존 backend 컨테이너만 정리 중 ==="
               docker stop matchalot-backend 2>/dev/null || true
               docker rm matchalot-backend 2>/dev/null || true
-              docker stop matchalot-nginx 2>/dev/null || true
-              docker rm matchalot-nginx 2>/dev/null || true
-              docker stop matchalot-prometheus 2>/dev/null || true
-              docker rm matchalot-prometheus 2>/dev/null || true
-              docker stop matchalot-grafana 2>/dev/null || true
-              docker rm matchalot-grafana 2>/dev/null || true
             fi
             
             # 새 컨테이너 실행 (docker-compose 활용)
