--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   backend:
-    image: matchalot:latest
+    build: ../backend
     container_name: matchalot-backend
     ports:
       - "8080:8080"
