--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -1,4 +1,4 @@
-name: Blue-Green Deploy
+name: Build and Deploy
 on:
   push:
     branches: [ main ]
@@ -7,15 +7,64 @@ on:
       - 'build.gradle'
       - 'Dockerfile'
       - 'settings.gradle'
+  workflow_dispatch:  # 수동 실행 가능
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      
+      - name: Build with Gradle
+        run: ./gradlew build -x test --no-daemon
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/matchalot-vm:latest
+            ${{ secrets.DOCKER_USERNAME }}/matchalot-vm:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            JAR_FILE=build/libs/*.jar
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    
+    steps:
       - name: Blue-Green Deploy to Azure VM
         uses: appleboy/ssh-action@v0.1.10
         with:
@@ -23,40 +72,25 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
-          timeout: 900s
+          timeout: 300s
           script: |
             echo "=== Blue-Green 배포 시작 ==="
             
-            # 프로젝트 디렉토리로 이동
-            cd /home/youkm0806/matchalot/backend
+            # Docker Hub에서 최신 이미지 Pull
+            echo "=== Docker 이미지 Pull 중 ==="
+            docker pull ${{ secrets.DOCKER_USERNAME }}/matchalot-vm:latest
             
-            # 코드 업데이트 (빠른 방식)
-            echo "=== 코드 업데이트 중 ==="
-            timeout 30 git fetch origin main || echo "Git fetch 실패, 기존 코드 사용"
-            git reset --hard origin/main 2>/dev/null || true
-            git clean -fd 2>/dev/null || true
-            
-            # 현재 활성 환경 확인 (간단한 방식)
+            # 현재 활성 환경 확인
             echo "=== 현재 활성 환경 확인 중 ==="
             if docker ps --format '{{.Names}}' | grep -q "matchalot-blue"; then
-              if docker ps --format '{{.Names}}' | grep -q "matchalot-green"; then
-                # 둘 다 실행 중 - green으로 전환
-                CURRENT_ENV="blue"
-                TARGET_ENV="green"
-                TARGET_PORT=8081
-              else
-                # blue만 실행 중
-                CURRENT_ENV="blue"
-                TARGET_ENV="green"
-                TARGET_PORT=8081
-              fi
+              CURRENT_ENV="blue"
+              TARGET_ENV="green"
+              TARGET_PORT=8081
             elif docker ps --format '{{.Names}}' | grep -q "matchalot-green"; then
-              # green만 실행 중
               CURRENT_ENV="green"
               TARGET_ENV="blue"
               TARGET_PORT=8080
             else
-              # 아무것도 실행 중이지 않으면 blue로 시작
               CURRENT_ENV="none"
               TARGET_ENV="blue"
               TARGET_PORT=8080
@@ -64,127 +98,88 @@ jobs:
             
             echo "현재 활성: $CURRENT_ENV | 배포 대상: $TARGET_ENV (포트: $TARGET_PORT)"
             
-            # 기존 컨테이너들 정리
-            echo "=== 기존 컨테이너들 정리 중 ==="
+            # 기존 타겟 컨테이너 정리
             docker stop matchalot-$TARGET_ENV 2>/dev/null || true
             docker rm matchalot-$TARGET_ENV 2>/dev/null || true
             
-            # 첫 배포시만 기존 backend 컨테이너 정리 (nginx, prometheus, grafana는 유지)
-            if [ "$CURRENT_ENV" = "none" ]; then
-              echo "=== 기존 backend 컨테이너만 정리 중 ==="
-              docker stop matchalot-backend 2>/dev/null || true
-              docker rm matchalot-backend 2>/dev/null || true
-            fi
+            # 새 컨테이너 실행
+            echo "=== $TARGET_ENV 환경 시작 중 ==="
+            docker run -d \
+              --name matchalot-$TARGET_ENV \
+              -p $TARGET_PORT:8080 \
+              --network matchalot-network \
+              -e DB_HOST=${{ secrets.DB_HOST }} \
+              -e DB_PORT=${{ secrets.DB_PORT }} \
+              -e DB_NAME=${{ secrets.DB_NAME }} \
+              -e DB_USERNAME=${{ secrets.DB_USERNAME }} \
+              -e DB_PASSWORD=${{ secrets.DB_PASSWORD }} \
+              -e ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }} \
+              -e GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
+              -e GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
+              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
+              -e SPRING_PROFILES_ACTIVE=prod \
+              --restart unless-stopped \
+              ${{ secrets.DOCKER_USERNAME }}/matchalot-vm:latest
             
-            # 새 컨테이너 실행 (docker-compose 활용)
-            echo "=== $TARGET_ENV 환경에 새 컨테이너 실행 중 ==="
-            
-            # devops 디렉토리로 이동 (docker-compose가 있는 곳)
-            cd /home/youkm0806/matchalot/devops
-            
-            # 환경변수 설정
-            cat > .env << EOF
-            DB_HOST=${{ secrets.DB_HOST }}
-            DB_PORT=${{ secrets.DB_PORT }}
-            DB_NAME=${{ secrets.DB_NAME }}
-            DB_USERNAME=${{ secrets.DB_USERNAME }}
-            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-            ADMIN_EMAIL=${{ secrets.ADMIN_EMAIL }}
-            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
-            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
-            JWT_SECRET=${{ secrets.JWT_SECRET }}
-            EOF
-            
-            # Blue-Green을 위한 임시 docker-compose 파일 생성
-            if [ "$TARGET_ENV" = "blue" ]; then
-              sed "s/matchalot-backend/matchalot-blue/g; s/8080:8080/8080:8080/g" docker-compose.yml > docker-compose-blue.yml
-              docker-compose -f docker-compose-blue.yml up -d
-            else
-              sed "s/matchalot-backend/matchalot-green/g; s/8080:8080/8081:8080/g" docker-compose.yml > docker-compose-green.yml
-              docker-compose -f docker-compose-green.yml up -d
-            fi
-            
-            # 헬스체크 (최대 20회, 각 3초 간격)
-            echo "=== $TARGET_ENV 환경 헬스체크 중 ==="
-            for i in {1..20}; do
-              echo "헬스체크 시도 $i/20..."
+            # 헬스체크
+            echo "=== 헬스체크 중 ==="
+            for i in {1..30}; do
               if curl -f -s http://localhost:$TARGET_PORT/actuator/health > /dev/null 2>&1; then
                 echo "$TARGET_ENV 환경 준비 완료!"
                 break
               fi
-              if [ $i -eq 20 ]; then
-                echo "$TARGET_ENV 환경 헬스체크 실패!"
-                docker logs matchalot-$TARGET_ENV --tail 20
+              if [ $i -eq 30 ]; then
+                echo "헬스체크 실패!"
+                docker logs matchalot-$TARGET_ENV --tail 50
                 docker stop matchalot-$TARGET_ENV
                 docker rm matchalot-$TARGET_ENV
                 exit 1
               fi
-              sleep 3
+              sleep 2
             done
             
-            # nginx 설정 업데이트 및 트래픽 전환
+            # nginx 업데이트 및 트래픽 전환
+            echo "=== nginx 업데이트 중 ==="
+            
+            # nginx 이미지 pull
+            docker pull ${{ secrets.DOCKER_USERNAME }}/matchalot-vm-nginx:latest
+            
+            # 새로운 nginx 설정으로 업데이트
+            docker stop matchalot-nginx 2>/dev/null || true
+            docker rm matchalot-nginx 2>/dev/null || true
+            
+            # 네트워크 생성 (없으면)
+            docker network create matchalot-network 2>/dev/null || true
+            
+            # nginx 컨테이너 재시작 (새 설정으로)
+            docker run -d \
+              --name matchalot-nginx \
+              --network matchalot-network \
+              -p 80:80 \
+              -p 443:443 \
+              -v /etc/letsencrypt:/etc/letsencrypt:ro \
+              -v /var/www/certbot:/var/www/certbot \
+              -e TARGET_ENV=$TARGET_ENV \
+              --restart unless-stopped \
+              ${{ secrets.DOCKER_USERNAME }}/matchalot-vm-nginx:latest
+            
+            # nginx 내부에서 설정 변경
+            sleep 5
+            docker exec matchalot-nginx sh -c "sed -i 's/matchalot-blue:8080/matchalot-$TARGET_ENV:8080/g; s/matchalot-green:8080/matchalot-$TARGET_ENV:8080/g' /etc/nginx/nginx.conf"
+            docker exec matchalot-nginx nginx -s reload
+            
+            echo "nginx 트래픽 전환 완료!"
+            
+            # 기존 백엔드 컨테이너 정리 (nginx 업데이트 후)
             if [ "$CURRENT_ENV" != "none" ]; then
-              echo "=== nginx 트래픽 전환 중 ==="
-            
-              # nginx 설정 백업 (docker 컨테이너 내부에서)
-              docker exec matchalot-nginx cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.backup
-              cp ../nginx-ssl.conf ../nginx-ssl.conf.backup
-            
-              # 로컬 설정 파일 변경
-              if [ "$TARGET_ENV" = "green" ]; then
-                # Blue -> Green 전환
-                sed -i 's/server matchalot-blue:8080;/server matchalot-green:8080;/' ../nginx-ssl.conf
-                sed -i 's/server backend:8080;/server matchalot-green:8080;/' ../nginx-ssl.conf
-              else
-                # Green -> Blue 전환  
-                sed -i 's/server matchalot-green:8080;/server matchalot-blue:8080;/' ../nginx-ssl.conf
-                sed -i 's/server backend:8080;/server matchalot-blue:8080;/' ../nginx-ssl.conf
-              fi
-              
-              # 변경된 설정을 컨테이너에 복사
-              docker cp ../nginx-ssl.conf matchalot-nginx:/etc/nginx/nginx.conf
-            
-              # nginx 설정 테스트 및 리로드
-              if docker exec matchalot-nginx nginx -t; then
-                docker exec matchalot-nginx nginx -s reload
-                echo "nginx 트래픽 전환 완료!"
-              else
-                echo "nginx 설정 오류! 롤백 중..."
-                cp nginx-ssl.conf.backup nginx-ssl.conf
-                docker cp nginx-ssl.conf matchalot-nginx:/etc/nginx/nginx.conf
-                docker exec matchalot-nginx nginx -s reload
-                exit 1
-              fi
-            
-              # 트래픽 전환 확인
-              sleep 5
-              if curl -f -s https://api.match-a-lot.store/actuator/health > /dev/null 2>&1; then
-                echo "=== 배포 성공! ==="
-                echo "활성 환경: $TARGET_ENV (포트: $TARGET_PORT)"
-            
-                # 기존 환경 정리 (1분 후)
-                echo "1분 후 기존 $CURRENT_ENV 환경 정리 예정..."
-                (sleep 60 && \
-                  docker stop matchalot-$CURRENT_ENV 2>/dev/null && \
-                  docker rm matchalot-$CURRENT_ENV 2>/dev/null && \
-                  echo "기존 $CURRENT_ENV 환경 정리 완료" && \
-                  # 오래된 이미지 정리
-                  docker image prune -f && \
-                  # <none> 태그 이미지 정리
-                  docker rmi $(docker images -f "dangling=true" -q) 2>/dev/null || true && \
-                  echo "오래된 이미지 정리 완료") &
-            
-              else
-                echo "외부 헬스체크 실패! 롤백이 필요할 수 있습니다."
-                exit 1
-              fi
-            else
-              echo "=== 첫 배포 완료 ==="
-              echo "활성 환경: $TARGET_ENV (포트: $TARGET_PORT)"
+              sleep 10
+              docker stop matchalot-$CURRENT_ENV 2>/dev/null || true
+              docker rm matchalot-$CURRENT_ENV 2>/dev/null || true
+              echo "기존 $CURRENT_ENV 환경 정리 완료"
             fi
             
-            # 최종 상태 출력
-            echo "=== 최종 상태 ==="
+            # 오래된 이미지 정리
+            docker image prune -f
+            
+            echo "=== 배포 완료 ==="
             docker ps --filter "name=matchalot" --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
-            echo "메모리 사용량:"
-            docker stats --no-stream $(docker ps --filter "name=matchalot" --format "{{.Names}}" | tr '\n' ' ')
